--- a/Explainable_TechniquesII.ipynb
+++ b/Explainable_TechniquesII.ipynb
@@ -11,37 +11,7 @@
         "### Kayla Haeussler\n",
         "\n",
         "\n",
-        "[![Open In Collab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/AIPI-590-XAI/Duke-AI-XAI/blob/dev/templates/template.ipynb)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "F39T4PGX9eDC"
-      },
-      "outputs": [],
-      "source": [
-        "# Please use this to connect your GitHub repository to your Google Colab notebook\n",
-        "# Connects to any needed files from GitHub and Google Drive\n",
-        "import os\n",
-        "\n",
-        "# Remove Colab default sample_data\n",
-        "!rm -r ./sample_data\n",
-        "\n",
-        "# Clone GitHub files to colab workspace\n",
-        "repo_name = \"Duke-AI-XAI\" # Change to your repo name\n",
-        "git_path = 'https://github.com/AIPI-590-XAI/Duke-AI-XAI.git' #Change to your path\n",
-        "!git clone \"{git_path}\"\n",
-        "\n",
-        "# Install dependencies from requirements.txt file\n",
-        "#!pip install -r \"{os.path.join(repo_name,'requirements.txt')}\" #Add if using requirements.txt\n",
-        "\n",
-        "# Change working directory to location of notebook\n",
-        "notebook_dir = 'templates'\n",
-        "path_to_notebook = os.path.join(repo_name,notebook_dir)\n",
-        "%cd \"{path_to_notebook}\"\n",
-        "%ls"
+        "[![Open In Collab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/khaeuss808/AIPI590_Part2_ExplainableAITechniques/blob/main/Explainable_TechniquesII.ipynb)"
       ]
     },
     {
@@ -1241,7 +1211,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Interpretations of the PDP plots  \n",
+        "#### Interpretations of the PDP plots  \n",
         "(Important to consider changes in yaxis, as plots use differing yaxis scales!)\n",
         "* Fixed Acidity: The probability of white is fairly stable at lower values, but then drops steadily after around 8 and flattens around 11-12. \n",
         "* Volatile Acidity: Consistent decrease as volatile acidity goes up\n",
@@ -1405,7 +1375,10 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "The PDP plots are the averages of the ICE plots (shown in the dashed orange line on the plots)"
+        "#### Interpretations of the ICE plots\n",
+        "The PDP plots are the averages of the ICE plots (shown in the dashed orange line on the plots). Will focus on key takeways here.  \n",
+        "Many of the plots have lines moving together, like volatile acidity, residual sugar, chlorides, free sulfur and sulphates, meaning that there are consistent effects.  There are a couple of plots where the lines are not moving parallel, specfically fixed acidity, density, pH, (and possibly total sulfur dioxide), meaning the impact of the feature varies by the wine. This is insight we are able to see in ICE plots, but whose nuance is lost in the averaged PDP plot\n",
+        "Quality looks flat, reiteterating the earlier takeaway of quality not strongly effecting the model's decisions"
       ]
     },
     {
@@ -1571,6 +1544,27 @@
         "        monte_carlo=True,\n",
         "    )"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Interpretations of ALE plots\n",
+        "\n",
+        "ALE plots are centered around 0, with values above 0 in this case showing increase in prediction for white wine, as this was selected as our target class in our code. From the plots we can see that white wines are more prominent when sulfur dioxide, both free and total, are higher, and when residual sugars are higher (plateaus). Lower pH also pushes towards white. Higher volattile acidity, sulphates, alcohol and density push toward red. Chloride has a strong drop towards red around 0.05. Residual sugars has a strong jump toward white starting around 2. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Final Thoughts"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
     }
   ],
   "metadata": {
