--- a/Explainable_TechniquesII.ipynb
+++ b/Explainable_TechniquesII.ipynb
@@ -16,7 +16,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": 73,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -24,15 +24,12 @@
         "import numpy as np\n",
         "from sklearn.ensemble import RandomForestClassifier\n",
         "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.metrics import accuracy_score\n",
+        "from sklearn.metrics import accuracy_score, classification_report\n",
         "import seaborn as sns, matplotlib.pyplot as plt\n",
         "\n",
         "# For XAI techniques\n",
-        "import shap\n",
-        "\n",
         "from alepython import ale_plot\n",
-        "from sklearn.inspection import PartialDependenceDisplay\n",
-        "from sklearn.inspection import permutation_importance"
+        "from sklearn.inspection import PartialDependenceDisplay"
       ]
     },
     {
@@ -878,21 +875,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 74,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "RF Model Accuracy:  0.9930769230769231\n"
+            "RF Model Accuracy:  0.9930769230769231\n",
+            "\n",
+            "Classification Report:\n",
+            "               precision    recall  f1-score   support\n",
+            "\n",
+            "         red       0.99      0.98      0.98       294\n",
+            "       white       1.00      1.00      1.00      1006\n",
+            "\n",
+            "    accuracy                           0.99      1300\n",
+            "   macro avg       0.99      0.99      0.99      1300\n",
+            "weighted avg       0.99      0.99      0.99      1300\n",
+            "\n"
           ]
         }
       ],
       "source": [
         "y_pred = rf_model.predict(X_test)\n",
         "acc = accuracy_score(y_test, y_pred)\n",
-        "print(\"RF Model Accuracy: \", acc)"
+        "print(\"RF Model Accuracy: \", acc)\n",
+        "\n",
+        "report = classification_report(y_test, y_pred)\n",
+        "print(\"\\nClassification Report:\\n\", report)"
       ]
     },
     {
@@ -1564,7 +1575,9 @@
     {
       "cell_type": "markdown",
       "metadata": {},
-      "source": []
+      "source": [
+        "Through out exploratory analysis of correlation we saw a couple of features stand out with high correlation, as well as some that travel together (free and total sulfur). The PDP plots showed the big picture of the relationships between each of our features and the predicted wine type, with clear threshols and plateaus for some of the features, which was interesting to see especially since our model did not previously provide any transparency in these variations. The ICE plots, the unaveraged version of the PDP plots, showed how some features did not act consistently across wines, which may be a flag for possible interaction. ALE mostly backs up the PDP/ICE patterns, but feels more trustworthy where features are correlated, since it stays inside the data we actually have. ALE mostly backs up the PDP/ICE patterns, but feels more trustworthy where features are correlated, since it stays inside the data we actually have. The different views tell a consistent story."
+      ]
     }
   ],
   "metadata": {
